--- a/RequireTest/index.html
+++ b/RequireTest/index.html
@@ -3,11 +3,11 @@
 <html>
 <head>
     <title></title>
-		<script data-main='./js/main' src='http://requirejs.org/docs/release/2.1.15/minified/require.js' ></script>
+		<script data-main='./js/main-built' src='http://requirejs.org/docs/release/2.1.15/minified/require.js' ></script>
 </head>
 <body>
 <script>
-	
+
 
 </script>
 </body>
